# OpenGL-Starter

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
include/: cmake_variable.h.in  utils.hpp
resource/shaders/: fragment.frag.glsl  fragment2.frag.glsl  vertex.vert.glsl
src/: main.cpp  utils.cpp
